# magnet

./: .env.example  .gitignore  docker-compose.yaml  readme.md  sql_setup.md  test.py  tmp.py
apisix/: apisix.yaml  config.yaml
app/: main.py  pyproject.toml
client/: Cargo.toml  pyproject.toml  readme.md  test.py
client/src/: lib.rs  main.rs
client/src/urls/: admin.rs  login.rs
client/tests/: conftest.py  test_admin.py  test_auth.py  test_drive.py
init/postgres/: 01-setup.sh  02-schema.sql  03-grants.sql  04-seed.sh
queries/: learn.md  setup.sql
server/: Cargo.toml  Dockerfile  serve.sh
server/.sqlx/: query-1d9739f9d79e70530c9337aec2f5c6756157de146062cee04c9c9aa2bb332818.json  query-22b6a453f736834382ac561eaf0960a8012337905bec3c67366aa6c6ea5813b9.json  query-45bcb937c37039fb3b56cf0681adf0856428a65db4ea6448ad1b731f370de0ef.json  query-59a4c8b4071106ce5caa0f9cd0805fa724e3f3af88d48bdfd84a527dd7b2fb90.json  query-86a06333cc73e0afda2ad5f3aa0e6ab0dda340a4a23ba5fa161529975075c207.json  query-8a07b6a035a515fe7cb6708c49000147e4ed5b3bb46823910cd3fa951ee2cc4f.json  query-9a52f0e3da7295c9b1ba025bc0b77b28d6c604740e5a1f8ab2a394e2a1fae3e5.json  query-bed1604fe5531cc7b194be930662514a14016e160bb14be23a1d24794b73ee8c.json  query-d5787796cc3b582dea5dd0f4fe02f5ef7d7523c07629219888ef562b970be804.json  query-e18341ff0dfd3d8e053da8cff7d3a502cb4e58dff77915e1ca62bc8f574d1b4d.json
server/config/: constants.toml
server/src/: config.rs  main.rs
server/src/config/: constants.rs  mod.rs
server/src/urls/: admin.rs  login.rs  mod.rs
server/src/urls/account/: login.rs  logout.rs  mod.rs  profile.rs
server/src/urls/admin/: mod.rs  ping.rs  signup_code.rs
server/src/urls/auth/: login.rs  logout.rs  mod.rs  signup.rs  whoami.rs
server/src/urls/common/: mod.rs  ping.rs
server/src/urls/drive/: delete.rs  get.rs  mod.rs  post.rs  upload.rs  view.rs
server/src/urls/mail/: mod.rs
server/src/utils/: auth.rs  config.rs  global.rs  mod.rs
server/static/: config.toml  constraints.toml
