[package]
name = "client"
version = "0.1.0"
edition = "2024"
description = ""

[dependencies]
rustyline = "17.0.2"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.24", features = ["json"] }
hex = "0.4.3"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["net"] }