[package]
name = "client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "client"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
reqwest = { version = "0.13.2", features = ["json", "blocking", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
