[package]
name = "server"
version = "0.1.0"
edition = "2024"
include = ["static/**"]

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
sqlx = {version = "0.8.6", features = ["runtime-tokio", "postgres", "time", "macros"]}
#argon2 = "0.5.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

log = "0.4.28"
env_logger = "0.11.8"

anyhow = "1.0.100"
hex = "0.4.3"
sha2 = "0.10.9"
hex-literal = "1.0.0"
rand = "0.10.0"
time = "0.3.47"

[profile.release]
opt-level = 3
lto = "fat"