[package]
name = "server"
version = "0.1.0"
edition = "2024"
include = ["static/**"]

[dependencies]
tokio = { version = "1.52.0", features = ["rt-multi-thread", "net", "signal"] }
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "time", "macros"] }
redis = { version = "1.2.2", features = ["tokio-comp", "aio", "connection-manager"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
base64 = "0.22.1"

log = "0.4.28"
env_logger = "0.11.8"

anyhow = "1.0.100"
hex = "0.4.3"
sha2 = "0.11.0"
rand = "0.10.0"
time = "0.3.47"
